--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -152,7 +152,12 @@
         "id": "58627d1c"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "#Init variables\n",
+        "m = 3.0\n",
+        "Levy_exponent = [0.1, 0.5, 1.0, 1.9]\n",
+        "beta = 0\n"
+      ]
     },
     {
       "cell_type": "markdown",
