--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -156,7 +156,9 @@
         "#Init variables\n",
         "m = 3.0\n",
         "Levy_exponent = [0.1, 0.5, 1.0, 1.9]\n",
-        "beta = 0\n"
+        "beta = 0\n",
+        "\n",
+        "aux_domain = np.linspace(m-5, m+5, 400)"
       ]
     },
     {
