Add Levy_pdf line

--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "9c33a472",
       "metadata": {
         "id": "9c33a472"
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "58627d1c",
       "metadata": {
         "id": "58627d1c"
@@ -158,7 +158,9 @@
         "Levy_exponent = [0.1, 0.5, 1.0, 1.9]\n",
         "beta = 0\n",
         "\n",
-        "aux_domain = np.linspace(m-5, m+5, 400)"
+        "aux_domain = np.linspace(m-5, m+5, 400)\n",
+        "\n",
+        "Levy_pdf = np.array([levy_stable.pdf(i, alpha=Levy_exponent, beta=beta, loc=m) for i in aux_domain])"
       ]
     },
     {
