--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -160,7 +160,16 @@
         "\n",
         "aux_domain = np.linspace(m-5, m+5, 400)\n",
         "\n",
-        "Levy_pdf = np.array([levy_stable.pdf(i, alpha=Levy_exponent, beta=beta, loc=m) for i in aux_domain])"
+        "Levy_pdf = np.array([levy_stable.pdf(i, alpha=Levy_exponent, beta=beta, loc=m) for i in aux_domain])\n",
+        "\n",
+        "fig_Levy_pdf = go.Figure()\n",
+        "\n",
+        "fig_Levy_pdf.add_trace(go.Scatter(x = aux_domain,\n",
+        "                                  y = Levy_pdf,\n",
+        "                                  marker = dict(size = 2),\n",
+        "                                  mode = 'lines',\n",
+        "                                  name = 'Levy_{}'.format(Levy_exponent),\n",
+        "                                  sholegend = True))"
       ]
     },
     {
