--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -144,7 +144,7 @@
         "id": "58627d1c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 817
+          "height": 837
         },
         "outputId": "e13bba4f-25ea-49fd-aa6b-c57c5c1f0e0f"
       },
@@ -238,7 +238,13 @@
         "id": "7c5082a3"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Init variables\n",
+        "m = 3.0\n",
+        "Levy_exponent = 1.8\n",
+        "beta = 0\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
