--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "7c5082a3",
       "metadata": {
         "id": "7c5082a3"
@@ -243,7 +243,8 @@
         "m = 3.0\n",
         "Levy_exponent = 1.8\n",
         "beta = 0\n",
-        "\n"
+        "\n",
+        "aux_domain = np.linspace(m-5, m+5, 400)"
       ]
     },
     {
