Add Levy_r variable

--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -144,7 +144,7 @@
         "id": "58627d1c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 817
+          "height": 837
         },
         "outputId": "e13bba4f-25ea-49fd-aa6b-c57c5c1f0e0f"
       },
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "id": "7c5082a3",
       "metadata": {
         "id": "7c5082a3"
@@ -245,7 +245,8 @@
         "beta = 0\n",
         "\n",
         "aux_domain = np.linspace(m-5, m+5, 400)\n",
-        "Levy_pdf = np.array([levy_stable.pdf(i, alpha=Levy_exponent, beta=beta, loc=m) for i in aux_domain])"
+        "Levy_pdf = np.array([levy_stable.pdf(i, alpha=Levy_exponent, beta=beta, loc=m) for i in aux_domain])\n",
+        "Levy_r = levy_stable.rvs(alpha=Levy_exponent, beta=beta, loc=m, size=100)"
       ]
     },
     {
