--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -144,7 +144,7 @@
         "id": "58627d1c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 817
+          "height": 837
         },
         "outputId": "b037be93-cd29-4ff6-e264-dc0974cc0a44"
       },
@@ -302,7 +302,9 @@
         "m = 3.0\n",
         "Levy_exponent = 1.8\n",
         "beta = 0\n",
-        "n_steps = 1000\n"
+        "n_steps = 1000\n",
+        "\n",
+        "aux_domain = np.linspace(m-5, m+5, 400)\n"
       ]
     },
     {
