--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -144,7 +144,7 @@
         "id": "58627d1c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 837
+          "height": 817
         },
         "outputId": "b037be93-cd29-4ff6-e264-dc0974cc0a44"
       },
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 195,
       "id": "147f549b",
       "metadata": {
         "id": "147f549b"
@@ -303,8 +303,10 @@
         "Levy_exponent = 1.8\n",
         "beta = 0\n",
         "n_steps = 1000\n",
+        "s_pos = [0,0]\n",
         "\n",
-        "aux_domain = np.linspace(m-5, m+5, 400)\n"
+        "aux_domain = np.linspace(m-5, m+5, 400)\n",
+        "Levy_pdf = np.array([levy_stable.pdf(i, alpha=Levy_exponent,beta=beta,loc=m)for i in aux_domain])"
       ]
     },
     {
