Add Levy trajectory

--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -305,8 +305,13 @@
         "n_steps = 1000\n",
         "s_pos = [0,0]\n",
         "\n",
+        "# Generar valores para el PDF de la distribución Lévy\n",
         "aux_domain = np.linspace(m-5, m+5, 400)\n",
-        "Levy_pdf = np.array([levy_stable.pdf(i, alpha=Levy_exponent,beta=beta,loc=m)for i in aux_domain])"
+        "Levy_pdf = np.array([levy_stable.pdf(i, alpha=Levy_exponent,beta=beta,loc=m)for i in aux_domain])\n",
+        "\n",
+        "# Generar trayectoria Lévy\n",
+        "Levy_rvs = levy_stable(Levy_exponent, beta, loc=m, size=n_steps)\n",
+        "\n"
       ]
     },
     {
