--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -144,7 +144,7 @@
         "id": "58627d1c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 817
+          "height": 837
         },
         "outputId": "b037be93-cd29-4ff6-e264-dc0974cc0a44"
       },
@@ -311,7 +311,9 @@
         "\n",
         "# Generar trayectoria Lévy\n",
         "Levy_rvs = levy_stable(Levy_exponent, beta, loc=m, size=n_steps)\n",
-        "\n"
+        "\n",
+        "#Inicializar DataFrame para guardar la trayectoria\n",
+        "LF_2d_df = pd.DataFrame(columns=['x_pos', 'y_pos'])"
       ]
     },
     {
