Agregar posición inicial al DataFrame

--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -313,7 +313,10 @@
         "Levy_rvs = levy_stable(Levy_exponent, beta, loc=m, size=n_steps)\n",
         "\n",
         "#Inicializar DataFrame para guardar la trayectoria\n",
-        "LF_2d_df = pd.DataFrame(columns=['x_pos', 'y_pos'])"
+        "LF_2d_df = pd.DataFrame(columns=['x_pos', 'y_pos'])\n",
+        "\n",
+        "#Agregar posición inicial al DataFrame\n",
+        "template_df = pd.DataFrame([{'x_pos':s_pos[0], 'y_pos':s_pos[1]}])"
       ]
     },
     {
