--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -316,7 +316,10 @@
         "LF_2d_df = pd.DataFrame(columns=['x_pos', 'y_pos'])\n",
         "\n",
         "#Agregar posición inicial al DataFrame\n",
-        "template_df = pd.DataFrame([{'x_pos':s_pos[0], 'y_pos':s_pos[1]}])"
+        "temp_df = pd.DataFrame([{'x_pos':s_pos[0], 'y_pos':s_pos[1]}])\n",
+        "\n",
+        "#Concatenar\n",
+        "LF_2d_df = pd.concat([LF_2d_df, temp_df], ignore_index=True)"
       ]
     },
     {
