--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -319,7 +319,12 @@
         "temp_df = pd.DataFrame([{'x_pos':s_pos[0], 'y_pos':s_pos[1]}])\n",
         "\n",
         "#Concatenar\n",
-        "LF_2d_df = pd.concat([LF_2d_df, temp_df], ignore_index=True)"
+        "LF_2d_df = pd.concat([LF_2d_df, temp_df], ignore_index=True)\n",
+        "\n",
+        "#Calcular y agregar posiciones sucesivas a la trayectoria\n",
+        "for i in range(n_steps-1):\n",
+        "  #Inicializar vector de velocidad\n",
+        ""
       ]
     },
     {
