Add velocity  vector

--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -324,6 +324,7 @@
         "#Calcular y agregar posiciones sucesivas a la trayectoria\n",
         "for i in range(n_steps-1):\n",
         "  #Inicializar vector de velocidad\n",
+        "  velocity = Vec2d(Levy_rvs[i], 0)\n",
         ""
       ]
     },
