Add rotated velocity vector

--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -325,6 +325,9 @@
         "for i in range(n_steps-1):\n",
         "  #Inicializar vector de velocidad\n",
         "  velocity = Vec2d(Levy_rvs[i], 0)\n",
+        "  #Rotar el vector de velocidad\n",
+        "  velocity = velocity.rotated(Levy_rvs[i])\n",
+        "\n",
         ""
       ]
     },
