Add init variables

--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 191,
+      "execution_count": null,
       "id": "9c33a472",
       "metadata": {
         "id": "9c33a472"
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 199,
+      "execution_count": null,
       "id": "e2ee1ad4",
       "metadata": {
         "id": "e2ee1ad4"
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 192,
+      "execution_count": null,
       "id": "58627d1c",
       "metadata": {
         "id": "58627d1c",
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 189,
+      "execution_count": null,
       "id": "7c5082a3",
       "metadata": {
         "id": "7c5082a3",
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 224,
+      "execution_count": null,
       "id": "147f549b",
       "metadata": {
         "id": "147f549b",
@@ -395,8 +395,7 @@
         "                        scene=dict(xaxis_title='x_pos (mm)',\n",
         "                                    yaxis_title='y_pos (mm)'))\n",
         "\n",
-        "fig_LF_2d.show()\n",
-        ""
+        "fig_LF_2d.show()\n"
       ]
     },
     {
@@ -424,7 +423,13 @@
         "id": "68b774d1"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "#Init variables\n",
+        "n_traj = 6\n",
+        "resolution = 100\n",
+        "s_pos = [0, 0]\n",
+        "speed = 5"
+      ]
     }
   ],
   "metadata": {
