--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -428,7 +428,10 @@
         "n_traj = 6\n",
         "resolution = 100\n",
         "s_pos = [0, 0]\n",
-        "speed = 5"
+        "speed = 5\n",
+        "\n",
+        "#Cauchy distribution\n",
+        "aux_domain = np.linspace(0 , 2*np.pi, resolution)"
       ]
     }
   ],
