Coefiente de Cauchy para cada trayectoria

--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -431,7 +431,9 @@
         "speed = 5\n",
         "\n",
         "#Cauchy distribution\n",
-        "aux_domain = np.linspace(0 , 2*np.pi, resolution)"
+        "aux_domain = np.linspace(0 , 2*np.pi, resolution)\n",
+        "#Coefiente de Cauchy para cada trayectoria\n",
+        "CRW_exponents = np.linspace(0.2, 0.5, n_traj)"
       ]
     }
   ],
