--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "9c33a472",
       "metadata": {
         "id": "9c33a472"
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "e2ee1ad4",
       "metadata": {
         "id": "e2ee1ad4"
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "68b774d1",
       "metadata": {
         "id": "68b774d1"
@@ -433,7 +433,12 @@
         "#Cauchy distribution\n",
         "aux_domain = np.linspace(0 , 2*np.pi, resolution)\n",
         "#Coefiente de Cauchy para cada trayectoria\n",
-        "CRW_exponents = np.linspace(0.2, 0.5, n_traj)"
+        "CRW_exponents = np.linspace(0.2, 0.5, n_traj)\n",
+        "\n",
+        "#Hacer el ciclo de acuerdo al número de trayectorias\n",
+        "for i in range(n_traj):\n",
+        "  #Init velocity vector with Vec2d\n",
+        "  velocity = Vec2d"
       ]
     }
   ],
