--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "id": "68b774d1",
       "metadata": {
         "id": "68b774d1"
@@ -438,7 +438,9 @@
         "#Hacer el ciclo de acuerdo al número de trayectorias\n",
         "for i in range(n_traj):\n",
         "  #Init velocity vector with Vec2d\n",
-        "  velocity = Vec2d"
+        "  velocity = Vec2d\n",
+        "  #Dirección de las trayectorias de manera aleatoria\n",
+        "  wrapcauchy_rvs = wrapcauchy.rvs(CRW_exponents[i], size=resolution)"
       ]
     }
   ],
