Guardar trayectorias en Pandas Data Frame

--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "id": "68b774d1",
       "metadata": {
         "id": "68b774d1"
@@ -438,9 +438,12 @@
         "#Hacer el ciclo de acuerdo al número de trayectorias\n",
         "for i in range(n_traj):\n",
         "  #Init velocity vector with Vec2d\n",
-        "  velocity = Vec2d\n",
+        "  velocity = Vec2d(speed, 0)\n",
         "  #Dirección de las trayectorias de manera aleatoria\n",
-        "  wrapcauchy_rvs = wrapcauchy.rvs(CRW_exponents[i], size=resolution)"
+        "  wrapcauchy_rvs = wrapcauchy.rvs(CRW_exponents[i], size=resolution)\n",
+        "\n",
+        "  #Guardar trayectorias en Pandas Data Frame\n",
+        "  CRW_2d_df = pd.DataFrame(columns=['x_pos', 'y_pos'])"
       ]
     }
   ],
