--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -443,7 +443,9 @@
         "  wrapcauchy_rvs = wrapcauchy.rvs(CRW_exponents[i], size=resolution)\n",
         "\n",
         "  #Guardar trayectorias en Pandas Data Frame\n",
-        "  CRW_2d_df = pd.DataFrame(columns=['x_pos', 'y_pos'])"
+        "  CRW_2d_df = pd.DataFrame(columns=['x_pos', 'y_pos'])\n",
+        "  temp_df = pd.DataFrame([{'x_pos': s_pos[0], 'y_pos': s_pos[1]}])\n",
+        ""
       ]
     }
   ],
