--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "id": "68b774d1",
       "metadata": {
         "id": "68b774d1"
@@ -445,7 +445,9 @@
         "  #Guardar trayectorias en Pandas Data Frame\n",
         "  CRW_2d_df = pd.DataFrame(columns=['x_pos', 'y_pos'])\n",
         "  temp_df = pd.DataFrame([{'x_pos': s_pos[0], 'y_pos': s_pos[1]}])\n",
-        ""
+        "\n",
+        "  #Concatenar\n",
+        "  CRW_2d_df = pd.concat([CRW_2d_df, temp_df], ignore_index=True)"
       ]
     }
   ],
