--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -447,7 +447,13 @@
         "  temp_df = pd.DataFrame([{'x_pos': s_pos[0], 'y_pos': s_pos[1]}])\n",
         "\n",
         "  #Concatenar\n",
-        "  CRW_2d_df = pd.concat([CRW_2d_df, temp_df], ignore_index=True)"
+        "  CRW_2d_df = pd.concat([CRW_2d_df, temp_df], ignore_index=True)\n",
+        "\n",
+        "  for j in range(resolution):\n",
+        "    #La rotación de cada trayectoria\n",
+        "    velocity = velocity.rotated(wrapcauchy_rvs[i])\n",
+        "\n",
+        ""
       ]
     }
   ],
