Exportar a archivo tipo pkl

--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 13,
       "id": "68b774d1",
       "metadata": {
         "id": "68b774d1"
@@ -455,7 +455,10 @@
         "\n",
         "    temp_df = pd.DataFrame([{'x_pos': CRW_2d_df.x_pos[j] + velocity.x, 'y_pos': CRW_2d_df.y_pos[j] + velocity.y}])\n",
         "    #Concatenar\n",
-        "    CRW_2d_df = pd.concat([CRW_2d_df, temp_df], ignore_index=True)"
+        "    CRW_2d_df = pd.concat([CRW_2d_df, temp_df], ignore_index=True)\n",
+        "\n",
+        "    #Exportar el Data Frame con las trayectorias a un archivo tipo pkl\n",
+        "    CRW_2d_df.to_pickle = 'CRW, Cauchy {}.pkl'.format(i)"
       ]
     }
   ],
