--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "68b774d1",
       "metadata": {
         "id": "68b774d1"
@@ -458,7 +458,23 @@
         "    CRW_2d_df = pd.concat([CRW_2d_df, temp_df], ignore_index=True)\n",
         "\n",
         "    #Exportar el Data Frame con las trayectorias a un archivo tipo pkl\n",
-        "    CRW_2d_df.to_pickle = 'CRW, Cauchy {}.pkl'.format(i)"
+        "    CRW_2d_df.to_pickle = 'CRW, Cauchy {}.pkl'.format(i)\n",
+        "\n",
+        "\n",
+        "#Graficar en 3D\n",
+        "fig_CRW_3d = go.Figure()\n",
+        "\n",
+        "for k in range(n_traj):\n",
+        "  fig_CRW_3d.add_trace(go.Scatter3d(\n",
+        "      x = CRW_2d_df[k]['x_pos'],\n",
+        "      y = CRW_2d_df[k]['y_pos'],\n",
+        "      z = np.linspace(0, 1, resolution),\n",
+        "      marker = dict(size = 2),\n",
+        "      line = dict(width = 2),\n",
+        "      mode = 'lines',\n",
+        "      name = 'CRW, Cauchy {}'.format(CRW_exponents[k]),\n",
+        "      showlegend = True))\n",
+        ""
       ]
     }
   ],
