--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "68b774d1",
       "metadata": {
         "id": "68b774d1"
@@ -435,6 +435,9 @@
         "#Coefiente de Cauchy para cada trayectoria\n",
         "CRW_exponents = np.linspace(0.2, 0.5, n_traj)\n",
         "\n",
+        "#Lista para almacenar los DataFrames de las trayectorias\n",
+        "CRW_2d_df_list = []\n",
+        "\n",
         "#Hacer el ciclo de acuerdo al número de trayectorias\n",
         "for i in range(n_traj):\n",
         "  #Init velocity vector with Vec2d\n",
@@ -451,12 +454,14 @@
         "\n",
         "  for j in range(resolution):\n",
         "    #La rotación de cada trayectoria\n",
-        "    velocity = velocity.rotated(wrapcauchy_rvs[i])\n",
+        "    velocity = velocity.rotated(wrapcauchy_rvs[j])\n",
         "\n",
         "    temp_df = pd.DataFrame([{'x_pos': CRW_2d_df.x_pos[j] + velocity.x, 'y_pos': CRW_2d_df.y_pos[j] + velocity.y}])\n",
         "    #Concatenar\n",
         "    CRW_2d_df = pd.concat([CRW_2d_df, temp_df], ignore_index=True)\n",
         "\n",
+        "    #Agregar el DataFrame de la trayectoria actual a la lista\n",
+        "    CRW_2d_df_list.append(CRW_2d_df)\n",
         "    #Exportar el Data Frame con las trayectorias a un archivo tipo pkl\n",
         "    CRW_2d_df.to_pickle = 'CRW, Cauchy {}.pkl'.format(i)\n",
         "\n",
@@ -466,8 +471,8 @@
         "\n",
         "for k in range(n_traj):\n",
         "  fig_CRW_3d.add_trace(go.Scatter3d(\n",
-        "      x = CRW_2d_df[k]['x_pos'],\n",
-        "      y = CRW_2d_df[k]['y_pos'],\n",
+        "      x = CRW_2d_df['x_pos'],\n",
+        "      y = CRW_2d_df['y_pos'],\n",
         "      z = np.linspace(0, 1, resolution),\n",
         "      marker = dict(size = 2),\n",
         "      line = dict(width = 2),\n",
