Add comments activity 2

--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -259,11 +259,17 @@
         "Levy_exponent = 1.8\n",
         "beta = 0\n",
         "\n",
+        "#Creación de un dominio auxiliar\n",
         "aux_domain = np.linspace(m-5, m+5, 400)\n",
+        "\n",
+        "#Cálculo de la función de densidad de probabilidad de la distribución de Levy\n",
         "Levy_pdf = np.array([levy_stable.pdf(i, alpha=Levy_exponent, beta=beta, loc=m) for i in aux_domain])\n",
+        "#Generación de números aleatorios según la distribución de Levy\n",
         "Levy_r = levy_stable.rvs(alpha=Levy_exponent, beta=beta, loc=m, size=1000)\n",
         "\n",
+        "#Creación del histograma\n",
         "plt.hist(Levy_r, bins=100, density=True, histtype='stepfilled', alpha=0.3, label='levy histo')\n",
+        "#Grafico\n",
         "plt.plot(aux_domain, Levy_pdf, 'r-', lw=5, alpha=0.5, label='levy pdf')\n",
         "\n",
         "#Desplegar leyendas\n",
