--- a/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
+++ b/TI_1_Practica2_JessicaMontserratMoralesEnrique.ipynb
@@ -194,13 +194,18 @@
         "Levy_exponent = [0.1, 0.5, 1.0, 1.9]\n",
         "beta = 0\n",
         "\n",
+        "#Crear dominio auxiliar\n",
         "aux_domain = np.linspace(m-5, m+5, 400)\n",
         "\n",
+        "#Inicializar la figura\n",
         "fig_Levy_pdf = go.Figure()\n",
         "\n",
+        "#Ciclo para cada exponente de Lévy\n",
         "for i in range(len(Levy_exponent)):\n",
+        "  #Calculo de la función de densidad de probabilidad de la distribución de Lévy\n",
         "  Levy_pdf = np.array([levy_stable.pdf(j, alpha=Levy_exponent[i], beta=beta, loc=m) for j in aux_domain])\n",
         "\n",
+        "  #Añadir el gráfico\n",
         "  fig_Levy_pdf.add_trace(go.Scatter(x = aux_domain,\n",
         "                                    y = Levy_pdf,\n",
         "                                    marker = dict(size = 2),\n",
@@ -208,11 +213,13 @@
         "                                    name = 'Levy_{}'.format(Levy_exponent[i]),\n",
         "                                    showlegend = True))\n",
         "\n",
+        "  #Diseño deñ título\n",
         "  fig_Levy_pdf.update_layout(title_text = 'Lévy distribution - N Curvas',\n",
         "                             autosize=False,\n",
         "                             width= 800,\n",
         "                             height = 800)\n",
         "\n",
+        "#Mostrar el gráfico\n",
         "fig_Levy_pdf.show()"
       ]
     },
